// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LookupListEditor error message handling should forward empty string if unexpected value 1`] = `
<div>
  <div
    class="undefined"
    data-testid="lookup-list-editor-list-editor"
    id="lookup-list-editor-list-editor"
  >
    <div
      data-testid="lookup-list-editor-list"
      id="lookup-list-editor-list"
    />
    <p
      class="MuiFormHelperText-root css-1g2spw3-MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`LookupListEditor error message handling should render object error 1`] = `
<div>
  <div
    class="undefined"
    data-testid="lookup-list-editor-list-editor"
    id="lookup-list-editor-list-editor"
  >
    <div
      data-testid="lookup-list-editor-list"
      id="lookup-list-editor-list"
    />
    <p
      class="MuiFormHelperText-root css-1g2spw3-MuiFormHelperText-root"
    >
      An error from an object
    </p>
  </div>
</div>
`;

exports[`LookupListEditor error message handling should render string error 1`] = `
<div>
  <div
    class="undefined"
    data-testid="lookup-list-editor-list-editor"
    id="lookup-list-editor-list-editor"
  >
    <div
      data-testid="lookup-list-editor-list"
      id="lookup-list-editor-list"
    />
    <p
      class="MuiFormHelperText-root css-1g2spw3-MuiFormHelperText-root"
    >
      A string error
    </p>
  </div>
</div>
`;

exports[`LookupListEditor should render default component 1`] = `
<div>
  <div
    class="undefined"
    data-testid="lookup-list-editor-list-editor"
    id="lookup-list-editor-list-editor"
  >
    <div
      data-testid="lookup-list-editor-list"
      id="lookup-list-editor-list"
    />
    <p
      class="MuiFormHelperText-root css-1g2spw3-MuiFormHelperText-root"
    />
  </div>
</div>
`;
